# ppit

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yaml
ppit/: cli.py  config.py  datasource.py  downsample.py  parse_yaml.py  train.py
ppit/preprocessing/: __init__.py  group_standard.py  standard.py  transformer_base.py
