[tool.poetry]
name = "ppit"
version = "0.1.0"
description = ""
authors = ["p3i0t <wangxin_0716@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.31"
numpy = ">=1.26.3,<2.0.0"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ppit = "ppit.cli:app"